<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_margin="10dp"
    android:padding="5dp"
    app:cardCornerRadius="10dp"
    app:cardElevation="5dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraint_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/release_result_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="TextView"
            app:layout_constraintTop_toTopOf="@+id/release_tv"
            app:layout_constraintStart_toEndOf="@+id/release_tv"
            android:layout_marginStart="10dp"/>

        <TextView
            android:id="@+id/release_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/release_year"
            android:layout_marginTop="15dp"
            app:layout_constraintStart_toStartOf="@+id/title_tv"
            app:layout_constraintTop_toBottomOf="@+id/title_tv"/>


        <TextView
            android:id="@+id/title_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/movie_title"
            android:layout_margin="10dp"
            app:layout_constraintStart_toEndOf="@+id/imageView"
            app:layout_constraintTop_toTopOf="@id/imageView" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="160dp"
            android:layout_height="180dp"
            android:layout_marginTop="10dp"
            android:layout_marginStart="10dp"
            android:layout_marginBottom="10dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_launcher_foreground" />


        <TextView
            android:id="@+id/title_result_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="TextView"
            app:layout_constraintTop_toTopOf="@+id/title_tv"
            app:layout_constraintStart_toEndOf="@+id/title_tv"
            android:layout_marginStart="10dp" />

        <RatingBar
            android:id="@+id/ratingBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/Widget.AppCompat.RatingBar.Small"
            android:scaleX=".8"
            android:scaleY=".8"
            android:rating="8.3"
            android:progressBackgroundTint="@color/yellow"
            android:secondaryProgressTint="@color/yellow"
            android:progressTint="@color/yellow"
            app:layout_constraintTop_toBottomOf="@+id/release_tv"
            app:layout_constraintStart_toStartOf="@+id/release_tv"
            android:layout_marginTop="15dp"
            android:numStars="10"
            android:stepSize="0.1"
            android:isIndicator="true"/>

        <Button
            android:id="@+id/addToFav_btn"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:text="@string/addToFav"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ratingBar"
            app:layout_constraintStart_toStartOf="@+id/ratingBar"/>




    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.cardview.widget.CardView>